--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     <body>
         <article>
             <h1>Nothing here yet...</h1>
-            <p>Currently there is nothing to see here.</p>
-			<p>I am not sure whether there ever will be.</p>
+            <p>Currently there is nothing here to see.</p>
+            <p>I am not sure whether there ever will be.</p>
             <p id="signature">&mdash; flx5</p>
         </article>
+        <a href="http://hits.dwyl.io/flx5/flx5.github.io"><img src="http://hits.dwyl.io/flx5/flx5.github.io.svg" /></a>
     </body>
 </html>
