Remove Counter and use real Name

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Flx5</title>
+        <title>Felix Prasse</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <style type="text/css">
@@ -20,8 +20,7 @@
             <h1>Nothing here yet...</h1>
             <p>Currently there is nothing here to see.</p>
             <p>I am not sure whether there ever will be.</p>
-            <p id="signature">&mdash; flx5</p>
+            <p id="signature">&mdash; Felix Prasse</p>
         </article>
-        <a href="http://hits.dwyl.io/flx5/flx5.github.io"><img src="http://hits.dwyl.io/flx5/flx5.github.io.svg" /></a>
     </body>
 </html>
